# resume-claim-ledger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: agent-guardrails.md  career-discovery.md  ledger-schema.md  maintenance.md  releasing.md  repo-intake.md
evidence/: agent-safety-cleanup.txt  agent-safety-code-size.txt  agent-safety-diff-check.txt  agent-safety-full-gates.txt  agent-safety-green.txt  agent-safety-manual-qa.txt  agent-safety-red.txt  evidence-triage-skill-diff-check.txt  evidence-triage-skill-full-gates.txt  evidence-triage-skill-manual-qa.txt  evidence-triage-skill-red.txt  final-advice.md  final-claim-review.md  final-claims.yml  final-f1-full-gates.txt  final-f1-plan-compliance.txt  final-f2-code-quality.txt  final-f2-code-size.txt  final-f3-coordinate-manual-qa.txt  final-f3-real-manual-qa.txt  final-f4-scope-fidelity.txt  final-f5-cleanup.txt  final-head-gates.txt  followup-final-f1-full-gates.txt  followup-final-f2-dogfood-review.txt  followup-final-f3-manual-qa.txt  followup-final-f4-scope-fidelity.txt  followup-final-f5-cleanup-review.txt  followup-final-root-review.txt  followup-pr-body.md  followup-precommit-check.txt  followup-staged-files.txt  followup-task-1-baseline.txt  followup-task-1-gates.txt  followup-task-1-qa.txt  followup-task-2-dogfood-run.txt  followup-task-2-qa.txt  followup-task-3-green.txt  followup-task-3-qa.txt  followup-task-3-red.txt  (+72 more)
plans/: moai-career-review-enhancement.md  readme-check.md
policy/: submission-policy.yml
qa/: career-polish-resume.md  claim-review.md  claims.yml  e2e-resume.md  empty-claims.yml  empty-resume.md  malformed-report.md  malformed.yml  sample-resume.md
tests/: test_agent_guardrails_contract.py  test_career_advisor.py  test_cli_coordinate.py  test_cli_e2e.py  test_cli_repo.py  test_coordinate_models.py  test_coordinate_reporter.py  test_coordinator.py  test_dependabot_contract.py  test_evidence_catalog.py  test_github_actions_contract.py  test_job_parser.py  test_korean_polish.py  (+14 more)
(+35 files in other folders)
