[project]
name = "resume-claim-ledger"
version = "0.1.0"
description = "Track and review resume claims against evidence before submission."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "candychan519" },
]
keywords = ["resume", "career", "evidence", "cli", "job-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.urls]
Repository = "https://github.com/candychan519/resume-claim-ledger"
Issues = "https://github.com/candychan519/resume-claim-ledger/issues"

[project.scripts]
resume-ledger = "resume_claim_ledger.cli:app"

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "pytest>=8.4.0",
    "ruff>=0.15.19",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "resume_claim_ledger"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
include = ["src", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D103",
    "D104",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"src/resume_claim_ledger/repo_analyzer.py" = ["PLR0913"]
"src/resume_claim_ledger/repo_analyzer_builders.py" = ["PLR0913"]
"src/resume_claim_ledger/repo_source.py" = ["S603"]
"tests/test_cli_e2e.py" = ["S603"]
"tests/test_cli_coordinate.py" = ["S603"]
"tests/test_cli_repo.py" = ["S603"]
"tests/test_repo_analyzer.py" = ["S603"]
"tests/test_repo_reporter.py" = ["S108"]
"tests/test_repo_source.py" = ["S603"]
